--- a/FacialAI/FacialAI.csproj
+++ b/FacialAI/FacialAI.csproj
@@ -142,18 +142,18 @@
     <Compile Include="FaceAILogin.Designer.cs">
       <DependentUpon>FaceAILogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="fmrHome.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="fmrHome.Designer.cs">
+      <DependentUpon>fmrHome.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <EmbeddedResource Include="FaceAILogin.resx">
       <DependentUpon>FaceAILogin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="fmrHome.resx">
+      <DependentUpon>fmrHome.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
